@@ -3,6 +3,10 @@ package com.demo;
 import lombok.SneakyThrows;
 
 /**
+ * 测试 young 满了后的担保，仔细观察GC日志
+ *
+ * -Xms20m -Xmx20m -Xmn10m -XX:+PrintGCDetails
+ *
  * @author ZhangShaowei on 2019/2/25 9:21
  **/
 public class TestGc {
